从yaml文件读取测试用例

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 addopts= -vs
-testpaths = ./InterfaceAuto/send_requests/test_relationRequest.py
+testpaths = ./InterfaceAuto/send_requests/
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
